--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,10 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 25vw, 75vw;
+  grid-template-rows: 12.5vh, 12.5vh, 62.5vh, 12.5vh;
+  gap: 15px;
 }
 
 .container div {
@@ -21,10 +25,13 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-column: 1/3;
+  grid-row: 1;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: 2/4;
 }
 
 .nav {
@@ -44,4 +51,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/3;
 }
