--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  gap: 4px;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 90px 45px calc(100vh - 90px - 54px - 25px) 25px;
 }
 
 .container div {
@@ -17,15 +21,38 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  justify-content: center;
+  white-space: nowrap;
+}
+
+.logo{
+  position: relative;
+  text-align: left;
+  white-space: inherit;
+}
+
+.menu ul{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
+  white-space: inherit;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: 2/4;
+  display: grid;
+  grid-template-rows: repeat(auto-fit, 1fr);
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -46,15 +73,29 @@
 
 .nav {
   background-color: #FF7755;
+  grid-row: 2/3;
+  white-space: nowrap;
+  gap: 15px;
+}
+
+.nav ul{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
 }
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-rows: repeat(auto-fit, 200px);
+  gap: 15px;
+  min-height: 0;
 }
 
 .article p {
@@ -83,6 +124,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/3;
 }
 
 .footer p {
